#flow: Login
#intent:
# Open up our app and use the default credentials to login

appId: com.hotelsuperapp
# You can find the appId of an Ignite app in the `app.json` file
# as the "package" under the "android" section and "bundleIdentifier" under the "ios" section
---
- clearState
- launchApp
- assertVisible: "Log In"
- tapOn:
    text: "Sign In"
- assertVisible: "Enter your email"
- assertVisible: "Enter your password"
